# irlib

./: CMakeLists.txt  LICENSE  LICENSE.TXT  README.md  build-wheel.sh  cpd.py  setup.py
c++/: CMakeLists.txt
c++/include/irlib/: basis.hpp  basis_impl.hpp  basis_mp.hpp  basis_ng.hpp  common.hpp  gauss_legendre.hpp  kernel.hpp  piecewise_polynomial.hpp
c++/include/irlib/detail/: aux.hpp  basis_impl.ipp  gauss_legendre.hpp  ir_basis.ipp  legendre_polynomials.hpp  spline.hpp
c++/test/: common.cpp  common.hpp  expensive_tests.cpp  kernel.cpp  mpmath.cpp  precomputed_basis.cpp  unittest.cpp  unittest.hpp
common/cmake/: EnableGtests.cmake  EnableTests.cmake  FindGMP.cmake  FindMPFR.cmake
common/swig/: multi_array.i  numpy.i
examples/0/: error.py  plot.py  plot_ng.py
examples/1/: insulating_Gtau.py  plot.py
examples/paper/: basis_f-mp-Lambda10.0.txt  basis_f-mp-Lambda100.0.txt  generate.py  plot.py
examples/publish_data/: basis_f-mp-Lambda10.0-atol1e-12.txt  basis_f-mp-Lambda10.0.txt  basis_f-mp-Lambda10.txt  basis_f-mp-Lambda100.0.txt  basis_f-mp-Lambda1000.0.txt  generate-high-acc.py  generate.py  output-Lambda100  output-Lambda1000.0  output-Lambda100000.0  plot.py
ir_basis/include/ir_basis/: common.hpp  ir_basis.hpp  ir_basis.ipp  piecewise_polynomial.hpp
ir_basis/include/ir_basis/detail/: aux.hpp  ir_basis.ipp  spline.hpp
ir_basis/src/: fastupdate.cpp
python/: CMakeLists.txt  basis.i  ir_basis.i  piecewise_polynomial.i  setup.py
python/test/: CMakeLists.txt  basis_test.py
samples/: README.txt  basis_b-mp-Lambda100.0.txt  basis_b-mp-Lambda1000.0.txt  basis_f-mp-Lambda10.0.txt  basis_f-mp-Lambda100.0.txt  basis_f-mp-Lambda1000.0.txt  coeff.py  compare.py  compare_np.py  derive.py  generate.py  plot.py
samples/np10/: basis_b-mp-Lambda100.0.txt  basis_b-mp-Lambda1000.0.txt  basis_f-mp-Lambda100.0.txt  basis_f-mp-Lambda1000.0.txt  generate.py
samples/np20/: basis_f-mp-Lambda10.0.txt  basis_f-mp-Lambda100.0.txt  basis_f-mp-Lambda1000.0.txt
samples/np6/: basis_f-mp-Lambda10.0.txt  generate.py
samples/np8/: basis_b-mp-Lambda10.0.txt  basis_b-mp-Lambda100.0.txt  basis_b-mp-Lambda10000.0.txt  basis_f-mp-Lambda10.0.txt  basis_f-mp-Lambda100.0.txt  generate.py
samples/np8-higher-order/: basis_b-mp-Lambda10.0.txt  basis_b-mp-Lambda100.0.txt  basis_f-mp-Lambda10.0.txt  basis_f-mp-Lambda100.0.txt  boson.sh  fermion.sh  generate.py  mk_database.sh
scripts/: gauss_legendre.py
test/: unittest.cpp  unittest.hpp
work/: gauss_legendre.py
